--- a/moonF2023.html
+++ b/moonF2023.html
@@ -702,43 +702,16 @@
             <div id="Country-block" class="title-area">
                 <div class="list-container">
                     <div class="title wow fadeIn">
-                        <span>「秋賞禮讚」秋季優惠</span><br />
+                        <span>「秋賞禮讚」秋季優惠</span>
                     </div>
                 </div>
                 <div class="container">
                     <div class="information" title="點我連結" target="_blank">
                         <div class="text-content">
                             <div class="text-area wow pulse" data-wow-duration=".7s">
-                                <div class="icon-box">
-                                    <img src="./images/planeT.png" alt="">
-                                </div>
                                 <div class="text-box">
-                                    <h3>適用開票日期</h3>
-                                    <p>13 SEP'23(WED) ~ 28 SEP'23(THU)<br />共計 16 天</p>
-                                </div>
-                            </div>
-                            <div class="text-area wow pulse" data-wow-duration=".7s" data-wow-delay=".3s">
-                                <div class="icon-box">
-                                    <img src="./images/calendar(2).png" alt="">
-                                </div>
-                                <div class="text-box">
-                                    <h3>
-                                        適用出發日期
-                                    </h3>
-                                    <p>13 SEP'23(WED) ~ 30 NOV'23(THU)</p>
-                                </div>
-                            </div>
-                            <div class="text-area wow pulse" data-wow-duration=".7s" data-wow-delay=".6s">
-                                <div class="icon-box">
-                                    <img src="./images/user.png" alt="">
-                                </div>
-                                <div class="text-box">
-                                    <h3>
-                                        適用對象
-                                    </h3>
-                                    <p>
-                                        成人及兒童個人機票 (不適用嬰兒機票)
-                                    </p>
+                                    <h3>台灣出發精選航線 限時優惠 (9/28前開票)</h3>
+                                    <h3>出發日期：即日起~2023/9/27、2023/10/1~10/4、2023/10/9~11/30</h3>
                                 </div>
                             </div>
                         </div>
@@ -746,95 +719,137 @@
                         <div class="links">
                             <a href="https://cs.sabretn.com.tw/artisan/search/?trip=Return&depCity=TPE&arrCity=OKA&deptDate=2023-11-27&retDate=2023-11-29&paxTypeADT=1&airlineCode=CI&classOfService=Y&stopCount=0"
                                 class="wow zoomIn">
-                                <div>
-                                    <h3>日本</h3>
-                                    <p>TWD <span class="price">10,699</span>起 </p>
+                                <div class="area-img">
+                                    <img src="./images/JAPAN.jpg" alt="">
+                                </div>
+                                <div class="black-cover"></div>
+
+                                <div class="area-box">
+                                    <div class="name-price">
+                                        <h3>日本</h3>
+                                        <p>TWD <span class="price">10,699</span> 起</p>
+                                    </div>
+                                    <div class="area-name">
+                                        東京/名古屋/福岡/札幌/沖繩/廣島/高松/熊本
+                                    </div>
                                 </div>
                             </a>
                             <a href="https://cs.sabretn.com.tw/artisan/search/?trip=Return&depCity=TPE&arrCity=ICN&deptDate=2023-11-27&retDate=2023-11-30&paxTypeADT=1&airlineCode=CI&classOfService=Y&stopCount=0"
                                 class="wow zoomIn">
-                                <div>
-                                    <h3>韓國</h3>
-                                    <p>TWD <span>10,099</span>起 </p>
+                                <div class="area-img">
+                                    <img src="./images/KOREA.jpg" alt="">
+                                </div>
+                                <div class="black-cover"></div>
+                                <div class="area-box">
+                                    <div class="name-price">
+                                        <h3>韓國</h3>
+                                        <p>TWD <span class="price">10,099</span> 起</p>
+                                    </div>
+                                    <div class="area-name">
+                                        首爾ICN仁川/首爾GMP金浦/釜山
+                                    </div>
                                 </div>
                             </a>
                             <a href="https://cs.sabretn.com.tw/artisan/search/?trip=Return&depCity=TPE&arrCity=AMS&deptDate=2023-11-19&retDate=2023-11-29&paxTypeADT=1&airlineCode=CI&classOfService=Y&stopCount=0"
                                 class="wow zoomIn">
-                                <div>
-                                    <h3>
-                                        歐洲
-                                    </h3>
-                                    <p>TWD
-                                        <span>
-                                            34,799
-                                        </span>
-                                        起
-                                    </p>
+                                <div class="area-img">
+                                    <img src="./images/Europe.jpg" alt="">
+                                </div>
+                                <div class="black-cover"></div>
+                                <div class="area-box">
+                                    <div class="name-price">
+                                        <h3>歐洲</h3>
+                                        <p>TWD <span class="price">34,799</span> 起</p>
+                                    </div>
+                                    <div class="area-name">
+                                        阿姆斯特丹/法蘭克福/維也納/羅馬/布拉格/倫敦
+                                    </div>
                                 </div>
                             </a>
                             <a href="https://cs.sabretn.com.tw/artisan/search/?trip=Return&depCity=TPE&arrCity=SYD&deptDate=2023-11-19&retDate=2023-11-28&paxTypeADT=1&airlineCode=CI&classOfService=Y&stopCount=0"
                                 class="wow zoomIn">
-                                <div>
-                                    <h3>
-                                        紐澳
-                                    </h3>
-                                    <p>TWD
-                                        <span>
-                                            33,799
-                                        </span>起
-                                    </p>
+                                <div class="area-img">
+                                    <img src="./images/NA.jpg" alt="">
+                                </div>
+                                <div class="black-cover"></div>
+                                <div class="area-box">
+                                    <div class="name-price">
+                                        <h3>紐澳</h3>
+                                        <p>TWD <span class="price">33,799</span> 起</p>
+                                    </div>
+                                    <div class="area-name">
+                                        雪梨/布里斯本/墨爾本/奧克蘭
+                                    </div>
                                 </div>
                             </a>
                             <a href="https://cs.sabretn.com.tw/artisan/search/?trip=Return&depCity=TPE&arrCity=LAX&deptDate=2023-11-20&retDate=2023-11-26&paxTypeADT=1&airlineCode=CI&classOfService=Y&stopCount=0"
                                 class="wow zoomIn">
-                                <div>
-                                    <h3>北美
-                                    </h3>
-                                    <p>TWD<span>35,369</span>起
-                                    </p>
+                                <div class="area-img">
+                                    <img src="./images/SFUSA.jpg" alt="">
+                                </div>
+                                <div class="black-cover"></div>
+                                <div class="area-box">
+                                    <div class="name-price">
+                                        <h3>北美</h3>
+                                        <p>TWD <span class="price">35,369</span> 起</p>
+                                    </div>
+                                    <div class="area-name">
+                                        洛杉磯LAX/洛杉磯ONT/舊金山<br>
+                                    </div>
                                 </div>
                             </a>
                             <a href="https://cs.sabretn.com.tw/artisan/search/?trip=Return&depCity=TPE&arrCity=PVG&deptDate=2023-11-17&retDate=2023-11-21&paxTypeADT=1&airlineCode=CI&classOfService=Y&stopCount=0"
                                 class="wow zoomIn">
-                                <div>
-                                    <h3>
-                                        中國
-                                    </h3>
-                                    <p>TWD
-                                        <span>
-                                            35,369
-                                        </span>起
-                                    </p>
+                                <div class="area-img">
+                                    <img src="./images/CHINA.jpg" alt="">
+                                </div>
+                                <div class="black-cover"></div>
+                                <div class="area-box">
+                                    <div class="name-price">
+                                        <h3>中國</h3>
+                                        <p>TWD <span class="price">10,650</span> 起</p>
+                                    </div>
+                                    <div class="area-name">
+                                        上海PVG浦東/上海SHA虹橋/廣州/深圳/北京/廈門/成都/福州
+                                    </div>
                                 </div>
                             </a>
                             <a href="https://cs.sabretn.com.tw/artisan/search/?trip=Return&depCity=TPE&arrCity=HKG&deptDate=2023-11-25&retDate=2023-11-26&paxTypeADT=1&airlineCode=CI&classOfService=Y&stopCount=0"
                                 class="wow zoomIn">
-                                <div>
-                                    <h3>
-                                        香港
-                                    </h3>
-                                    <p>
-                                        TWD
-                                        <span>9,199</span>起
-                                    </p>
+                                <div class="area-img">
+                                    <img src="./images/Vietnam.jpg" alt="">
+                                </div>
+                                <div class="black-cover"></div>
+                                <div class="area-box">
+                                    <div class="name-price">
+                                        <h3>東南亞</h3>
+                                        <p>TWD <span class="price">8,388</span> 起</p>
+                                    </div>
+                                    <div class="area-name">
+                                        新加坡<限CI-753+CI-754>/吉隆坡/河內/胡志明/馬尼拉/宿霧/雅加達/金邊
+                                    </div>
                                 </div>
                             </a>
                             <a href="https://cs.sabretn.com.tw/artisan/search/?trip=Return&depCity=TPE&arrCity=CEB&deptDate=2023-11-27&retDate=2023-11-30&paxTypeADT=1&airlineCode=CI&classOfService=Y&stopCount=0"
                                 class="wow zoomIn">
-                                <div>
-                                    <h3>
-                                        東南亞
-                                    </h3>
-                                    <p>
-                                        TWD
-                                        <span>
-                                            8,388
-                                        </span>起
-                                    </p>
+                                <div class="area-img">
+                                    <img src="./images/HK.jpg" alt="">
+                                </div>
+                                <div class="black-cover"></div>
+                                <div class="area-box">
+                                    <div class="name-price">
+                                        <h3>香港</h3>
+                                        <p>TWD <span class="price">9,199</span> 起</p>
+                                    </div>
+                                    <div class="area-name">
+                                    </div>
                                 </div>
                             </a>
                         </div>
-
+                        <div class="ci-if">
+                            <img src="./images/ci-1.jpg" alt="" class="wow zoomIn">
+                            <img src="./images/ci-2.png" alt="" class="wow zoomIn">
+                        </div>
                     </div>
                 </div>
             </div>
